# LLWM

./: README.md
branch based/src/: CMakeLists.txt  README.md  README_first_approach.md  watermark_bf.sh
branch based/src/evaluation/coreutils/: Makefile  overhead_size  table.css  test.sh
branch based/src/evaluation/coreutils/benchmarks/: a_cp_easy.md  a_dd_easy.md  a_du_easy.md  a_du_mid.md  a_ls_easy.md  a_ls_hard.md  cp_easy.md  cp_out_easy.md  dd_easy.md  dd_out_easy.md  du_easy.md  du_mid.md  du_out_easy.md  du_out_mid.md  ls_easy.md  ls_hard.md  ls_mid.md  ls_out_easy.md  ls_out_hard.md  ls_out_mid.md
branch based/src/evaluation/coreutils/files/: cp_clang  cp_orig_clang  cp_orig_gcc  cp_overhead.md  cp_wm1024  cp_wm128  cp_wm2048  cp_wm256  cp_wm4096  cp_wm512  cp_wm8  cp_wm8192  dd_clang  dd_orig_clang  dd_orig_gcc  dd_overhead.md  dd_wm1024  dd_wm128  dd_wm2048  dd_wm256  dd_wm4096  dd_wm512  dd_wm8  dd_wm8192  du_clang  du_orig_clang  du_orig_gcc  du_overhead.md  du_wm1024  du_wm128  du_wm2048  du_wm256  du_wm4096  du_wm512  du_wm8  du_wm8192  ls_clang  ls_orig_clang  ls_orig_gcc  ls_overhead.md  (+8 more)
branch based/src/evaluation/coreutils/logs/: cp_wm1024  cp_wm128  cp_wm2048  cp_wm256  cp_wm4096  cp_wm512  cp_wm8  cp_wm8192  dd_wm1024  dd_wm128  dd_wm2048  dd_wm256  dd_wm4096  dd_wm8  du_wm1024  du_wm128  du_wm2048  du_wm256  du_wm4096  du_wm512  du_wm8192  ls_wm1024  ls_wm128  ls_wm2048  ls_wm4096  ls_wm512  ls_wm8  ls_wm8192
branch based/src/input/gjk/: README.md
branch based/src/methods/branch_function/llvm_pass/: WMBranchFunction.cpp  WMBranchFunction.h  WMBranchFunctionAlt.cpp  WMBranchFunctionAlt.h  WMBranchFunctionEmbed.cpp  WMBranchFunctionEmbed.h  WMBranchFunctionLegacy.cpp
branch based/src/snippets/: llvm_cheatsheet.md  partial_sum_splitting.cpp  permutation.php
branch based/src/test/: README.md
branch based/src/test/src/: prog1.cpp
hashmark + xmark/Madata/xmark/Transforms/: CMakeLists.txt
hashmark + xmark/Madata/xmark/Transforms/InitialAnalysis/: CMakeLists.txt
hashmark + xmark/Madata/xmark/Transforms/InsertTpForConst/: CMakeLists.txt  InsertTP.cpp
hashmark + xmark/Madata/xmark/Transforms/InsertXmark/: InsertX.cpp  thoughts
hashmark + xmark/Madata/xmark/Transforms/InstrumentKlee/: CMakeLists.txt
(+1693 files in other folders)
