add_subdirectory(InsertTpForConst)
add_subdirectory(XmarkStatistics)
add_subdirectory(InstrumentXmarkStuff)
add_subdirectory(simpleOPs)
#add_subdirectory(obfuscator-llvm)
add_subdirectory(InsertXmark)
add_subdirectory(InstrumentKlee)
add_subdirectory(InitialAnalysis)
add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
